Установил связь между пользователем и задачами
